--- a/app/src/main/res/layout/layout_top_park_fragment.xml
+++ b/app/src/main/res/layout/layout_top_park_fragment.xml
@@ -9,7 +9,7 @@
         android:id="@+id/tv_current_city"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="当前城市: "
+        android:text="当前城市："
         android:textColor="@color/white"
         android:textSize="14sp"
         android:layout_gravity="center_vertical"
@@ -17,6 +17,7 @@
         />
 
     <ImageView
+        android:id="@+id/iv_select_city"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
