--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -108,7 +108,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="我的预约"
+                android:text="历史订单"
                 android:textColor="@color/black"
                 android:textSize="16sp"
                 android:layout_marginStart="32dp"/>
